Commit version 7.9 - tickets are now printable on both windows and iOS devices